--- a/Live-WPM/Live-WPM.csproj
+++ b/Live-WPM/Live-WPM.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{8B2D0D71-7DD8-4DB7-BA5D-185B676245CA}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>life_wpm</RootNamespace>
-    <AssemblyName>life-wpm</AssemblyName>
+    <RootNamespace>LiveWPM</RootNamespace>
+    <AssemblyName>LiveWPM</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -55,6 +55,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WindowsKeyboardHook.cs" />
     <EmbeddedResource Include="FormWPM.resx">
       <DependentUpon>FormWPM.cs</DependentUpon>
     </EmbeddedResource>
@@ -66,6 +67,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
